# backend-brprev

./: .env  .env.docker  main.py  makefile  poetry.toml  pyproject.toml  readme.md
.infra/docker/: docker-compose.yaml  dockerfile.backend
.infra/migracoes/alembic/: env.py
.infra/migracoes/alembic/versions/: 1d77db1604d8_tabela_produto.py  7ddca712afc7_tabela_plano.py  c1713e9fc155_tabela_cliente.py
contexto/governanca/dominio/comandos/: cliente.py
contexto/governanca/dominio/entidades/: cliente.py
contexto/governanca/dominio/eventos/: cliente.py
contexto/governanca/dominio/modelos/: cliente.py
contexto/governanca/dominio/objeto_de_valor/: cliente.py
contexto/governanca/erros/: cliente.py
contexto/governanca/pontos_de_entrada/: cliente.py
contexto/governanca/repositorios/orm/: cliente.py
contexto/governanca/repositorios/repos/: cliente.py
contexto/governanca/servicos/executores/: cliente.py
contexto/governanca/servicos/vizualizadores/: cliente.py
contexto/vendas/dominio/comandos/: plano.py  (+1 more)
contexto/vendas/erros/: plano.py  produto.py
contexto/vendas/pontos_de_entrada/: plano.py  produto.py
libs/ddd/barramento/: __init__.py
libs/ddd/comando/: __init__.py
libs/ddd/entidade/: __init__.py
libs/ddd/evento/: __init__.py
libs/ddd/repositorio/: __init__.py
libs/ddd/uow/: __init__.py
libs/env/: __init__.py  gerenciador_de_envs.py
libs/fastapi/: camelcase.py  exception.py
libs/orm/: caregar_orm.py  sqlalchemy.py
libs/pydantic/: apenas_id.py  camel_case.py  conversor.py  uuid.py
servidor/: config.py
test/: conftest.py
(+18 files in other folders)
