[tool.poetry]
name = "backend-brasilprev"
version = "0.1.0"
description = ""
authors = ["nicolas.mmb <nicolas.mmb@hotmail.com>"]
readme = "README.md"


# TEM QUE DIVIDIR EM AMBIENTE DE PROD E DEV
[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.30"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
uvicorn = "^0.29.0"
pytest = "^8.2.1"
faker = "^25.2.0"
pydantic-settings = "^2.2.1"
validate-docbr = "^1.10.0"
httpx = "^0.27.0"
freezegun = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
